#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
AC_INIT(freak, 0.0.2, devnull@example.com)
AC_CONFIG_SRCDIR([freak.cpp])
# AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([.])
# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
# AC_CHECK_HEADER_STDBOOL

# Checks for library functions.
AM_INIT_AUTOMAKE(freak, 0.0.2)
AC_OUTPUT(Makefile)
